--- a/plays/templates/plays/_tab_playmaker.html
+++ b/plays/templates/plays/_tab_playmaker.html
@@ -8,7 +8,7 @@
   <tbody>
     {% for obj in objects.players %}
         <tr style="font-size:0.9em;">
-            <td class="d-none d-md-table-cell">
+            <td class="">
             
             {% include "plays/partials/row_user.html" with data=obj %}
             </td>
