--- a/plays/templates/plays/_tab_summary.html
+++ b/plays/templates/plays/_tab_summary.html
@@ -1,7 +1,10 @@
 {% load i18n %}
 {% load thumbnail %}
 
+{% if objects.today_games %}
 Dzisiejsze mecze:
+{% endif %}
+
 {% include "plays/partials/table_games.html" with games=objects.today_games %}
 Rozegrane mecze:
 {% include "plays/partials/table_games.html" with games=objects.current_games %}
