--- a/plays/templates/plays/_tab_table.html
+++ b/plays/templates/plays/_tab_table.html
@@ -1,20 +1,17 @@
 {% load i18n %}
 {% load thumbnail %}
 
-
 <table class="table plays-table d-md-none">
       <thead>
         <tr>
-            <th scope="col" class="d-table-cell">{% trans 'Drużyna' %}</th>
-            <th scope="col" class="d-table-cell">{% trans 'G' %}</th>
+            <th scope="col" class="d-table-cell">{% trans 'Klub' %}</th>
+            <th scope="col" class="d-table-cell">{% trans 'M' %}</th>
             <th scope="col" class="d-table-cell">{% trans 'W' %}</th>
-            <th scope="col" class="d-table-cell">{% trans 'P' %}</th>
             <th scope="col" class="d-table-cell">{% trans 'R' %}</th>
-            <th scope="col" class="d-table-cell">{% trans 'G' %}</th>
             <th scope="col" class="d-table-cell">{% trans 'P' %}</th>
-            <th scope="col">
-                Trend
-            </th>
+            <th scope="col" class="d-table-cell">{% trans 'BR' %}</th>
+            <th scope="col" class="d-table-cell">{% trans 'PTK' %}</th>
+            <th scope="col">FORMA</th>
         </tr>
     </thead>
     <tbody>
@@ -31,8 +28,8 @@
         </td>
         <td class="d-table-cell">{{ obj.games }}</td>
         <td class="d-table-cell">{{ obj.wins }}</td>
-        <td class="d-table-cell">{{ obj.losts }}</td>
         <td class="d-table-cell">{{ obj.draws }}</td>
+        <td class="d-table-cell">{{ obj.losts }}</td>
         <td class="d-table-cell">{{ obj.goals }}</td>
         <td class="d-table-cell">{{ obj.points }}</td>
         <td class="d-table-cell">
@@ -47,20 +44,17 @@
 </table>
 
 
-
-
-
 <table class="table d-none d-md-table-cell plays-table">
       <thead>
         <tr>
-            <th scope="col" class="d-none d-md-table-cell">{% trans 'Drużyna' %}</th>
-            <th scope="col" class="d-none d-md-table-cell">{% trans 'G' %}</th>
+            <th scope="col" class="d-none d-md-table-cell">{% trans 'Klub' %}</th>
+            <th scope="col" class="d-none d-md-table-cell">{% trans 'M' %}</th>
             <th scope="col" class="d-none d-md-table-cell">{% trans 'W' %}</th>
-            <th scope="col" class="d-none d-md-table-cell">{% trans 'P' %}</th>
             <th scope="col" class="d-none d-md-table-cell">{% trans 'R' %}</th>
-            <th scope="col" class="d-none d-md-table-cell">{% trans 'G' %}</th>
             <th scope="col" class="d-none d-md-table-cell">{% trans 'P' %}</th>
-            <th scope="col" class="d-none d-md-table-cell">{% trans 'Trend' %}</th>
+            <th scope="col" class="d-none d-md-table-cell">{% trans 'BR' %}</th>
+            <th scope="col" class="d-none d-md-table-cell">{% trans 'PTK' %}</th>
+            <th scope="col" class="d-none d-md-table-cell">{% trans 'FORMA' %}</th>
         </tr>
     </thead>
     <tbody>
@@ -77,8 +71,8 @@
             </td>
             <td class="d-none d-md-table-cell">{{ obj.games }}</td>
          <td class="d-none d-md-table-cell">{{ obj.wins }}</td>
-         <td class="d-none d-md-table-cell">{{ obj.losts }}</td>
          <td class="d-none d-md-table-cell">{{ obj.draws }}</td>
+         <td class="d-none d-md-table-cell">{{ obj.losts }}</td>
          <td class="d-none d-md-table-cell">{{ obj.goals }}</td>
          <td class="d-none d-md-table-cell">{{ obj.points }}</td>
             <td class="d-none d-md-table-cell">
