--- a/plays/templates/plays/partials/table_games.html
+++ b/plays/templates/plays/partials/table_games.html
@@ -1,5 +1,5 @@
 {% load playmaker %}
-<table id="table-table" class="table plays-table d-md-none">
+<table id="table-table" class="table plays-table d-md-none" width="100%">
   <tbody>
   {% for name, data in games.items %}
     <tr style="font-size:0.9em;">
@@ -32,7 +32,7 @@
 </table>
 
 
-<table class="table d-none d-md-table-cell plays-table">
+<table class="table d-none d-md-table-cell plays-table" width="100%">
   <tbody>
   {% for name, data in games.items %}
     <tr style="font-size:0.9em;">
@@ -48,7 +48,7 @@
             <td class="d-none d-md-table-cell" >
                 {% if game.score %}
                 <a href="#showGameModal" data-toggle="modal" data-target="#showGameModal" data-game-json='{{game|jsonify}}'>{{ game.score }}</a>
-                {% else %}/ - /{% endif %}
+                {% else %}&nbsp;&nbsp;&nbsp;-{% endif %}
            </td>
 
             <td class="d-none d-md-table-cell" >
