--- a/plays/templates/plays/_tab_table.html
+++ b/plays/templates/plays/_tab_table.html
@@ -10,7 +10,7 @@
             <th scope="col" class="d-table-cell">{% trans 'R' %}</th>
             <th scope="col" class="d-table-cell">{% trans 'P' %}</th>
             <th scope="col" class="d-table-cell">{% trans 'BR' %}</th>
-            <th scope="col" class="d-table-cell">{% trans 'PTK' %}</th>
+            <th scope="col" class="d-table-cell">{% trans 'PKT' %}</th>
             <th scope="col">FORMA</th>
         </tr>
     </thead>
@@ -53,7 +53,7 @@
             <th scope="col" class="d-none d-md-table-cell">{% trans 'R' %}</th>
             <th scope="col" class="d-none d-md-table-cell">{% trans 'P' %}</th>
             <th scope="col" class="d-none d-md-table-cell">{% trans 'BR' %}</th>
-            <th scope="col" class="d-none d-md-table-cell">{% trans 'PTK' %}</th>
+            <th scope="col" class="d-none d-md-table-cell">{% trans 'PKT' %}</th>
             <th scope="col" class="d-none d-md-table-cell">{% trans 'FORMA' %}</th>
         </tr>
     </thead>
