--- a/plays/templates/plays/header_black.html
+++ b/plays/templates/plays/header_black.html
@@ -2,44 +2,60 @@
 {% load thumbnail %}
 
 <div class="page-heading " style="box-shadow: 0px -2px 7px #aaaaaa;">
-        <div class="container pt-2"ata-aos="fade-up">
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="row no-gutters">
-                        <div class="d-none d-md-block col-md-2">
-                            <img class=" avatar rounded img-responsive" title="profile picture" src="{% thumbnail league.picture|default:'default_profile.png' 'profile_avatar_show_mobile' %}">
-                        </div>
-                        <div class="d-md-none col-4 pull-right">
-                            <img class="d-md-none avatar rounded img-responsive" title="profile picture" src="{% thumbnail league.picture|default:'default_profile.png' 'profile_avatar_show_mobile' %}">
-                        </div>
-                        <div class="col-8">
-                            <h3 class="d-none d-md-block acc-name" style="#1b1b1b; padding: 25px 0px 0px  0px;">{{ league.name.upper }}</h3>
-                            <div class=" d-inline">
-                                {{ current_season }}
-                            </div>
-                        </div>
+    <div class="container pt-2"ata-aos="fade-up">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="row no-gutters">
+
+                    <div class="d-md-none col-4 pull-right" style="padding:0 0 0 15px;">
+                        <img class="d-md-none avatar rounded img-responsive" title="profile picture" src="{% thumbnail league.picture|default:'default_profile.png' 'tables_avatar_show' %}">
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="row">
-                         {% comment %} <h1 class=" d-md-none pl-3 acc-name">{{ league.name.upper }}</h1>
-                            <form >
-                                    {% include 'plays/filters/season.html' %}
-                            </form> {% endcomment %}
+                    <div class="d-md-none col-8">
+                        <h5 class="d-md-block" style="#1b1b1b;">{{ league.name.upper }}</h5>
+                        <div class=" d-inline">
+                            {{ current_season }} 
+                        </div>
+                        {% if league.parent %}
+                        <div class="d-block" > 
+                             {{ league.parent.name }} 
+                        </div>
+                        {% endif %}
+                    </div>
+                    <div class="d-none d-md-block col-md-2">
+                        <img class=" avatar rounded img-responsive" title="profile picture" src="{% thumbnail league.picture|default:'default_profile.png' 'profile_avatar_show_mobile' %}">
+                    </div>
+                    <div class="d-none d-md-block">
+                        <h3 class=" acc-name" style="#1b1b1b; padding: 15px 0px 0px  0px;">{{ league.name.upper }}</h3>
+                        <div class=" d-inline">
+                            {{ current_season }} 
+                        </div>
+                        {% if league.parent %}
+                        <div class="d-block" > 
+                             {{ league.parent.name }} 
+                        </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
-            
-            
-            <div class="row">
-                <div class="d-flex align-items-center">
-                    {% include 'plays/navbuttons.html' %}
+            <div class="col-md-4">
+                <div class="row">
+                        {% comment %} <h1 class=" d-md-none pl-3 acc-name">{{ league.name.upper }}</h1>
+                        <form >
+                                {% include 'plays/filters/season.html' %}
+                        </form> {% endcomment %}
                 </div>
-                <div class="d-flex align-items-center ">
-                    <span class="d-none d-md-block">
-                    {% include 'plays/buttons.html' %}
-                    </span>
-                </div>  
             </div>
         </div>
+
+        <div class="row">
+            <div class="d-flex align-items-center">
+                {% include 'plays/navbuttons.html' %}
+            </div>
+            <div class="d-flex align-items-center ">
+                <span class="d-none d-md-block">
+                {% include 'plays/buttons.html' %}
+                </span>
+            </div>  
+        </div>
+    </div>
 </div>
