--- a/plays/templates/plays/header_black.html
+++ b/plays/templates/plays/header_black.html
@@ -2,8 +2,8 @@
 {% load thumbnail %}
 
 <div class="page-heading " style="box-shadow: 0px -2px 7px #aaaaaa;">
-    <div class="container pt-2"ata-aos="fade-up">
-        <div class="row">
+    <div class="container pt-2" style="margin-left:5px;" ata-aos="fade-up">
+        <div class="row pb-2">
             <div class="col-md-8">
                 <div class="row no-gutters">
 
