--- a/plays/templates/plays/navbuttons.html
+++ b/plays/templates/plays/navbuttons.html
@@ -10,7 +10,7 @@
 
 <ul id="profile-nav" class="nav nav-tabs" role="tablist">
   <li class="nav-item">
-    <a class="nav-link pm-nav {% if request.path  == summary_url %}pm-nav-active{% endif %}" href="{{ summary_url }}?season={{ current_season }}">Podsumowanie</a>
+    <a class="nav-link pm-nav {% if request.path  == summary_url %}pm-nav-active{% endif %}" href="{{ summary_url }}?season={{ current_season }}">Ogólne</a>
   </li>
   <li class="nav-item">
     <a class="nav-link pm-nav {% if request.path  == scores_url %}pm-nav-active{% endif %}" href="{{ scores_url }}?season={{ current_season }}">Wyniki</a>  
