--- a/plays/templates/plays/partials/game_with_pic.html
+++ b/plays/templates/plays/partials/game_with_pic.html
@@ -1,9 +1,17 @@
 
-{% if image_left %}
-<img width="20" class="avatar rounded img-responsive" title="profile picture" src="{{ pic }}">
-{% endif %}
-{% if url %} <a href="{{ url }}"> {{ name}} </a>{% else %} {{ name }} {% endif %}
+<div style="d-flex">
 
+
+{% if image_left %}
+
+<img width="20" class="avatar rounded img-responsive" title="profile picture" src="{{ pic }}">
+
+{% endif %}
+<span>
+{% if url %} <a href="{{ url }}"> {{ name }} </a>{% else %} {{ name }} {% endif %}
+</span>
 {% if not image_left %}
 <img width="20" class="avatar rounded img-responsive" title="profile picture" src="{{ pic }}">
 {% endif %}
+
+</div>
