--- a/plays/templates/plays/plays.html
+++ b/plays/templates/plays/plays.html
@@ -10,6 +10,10 @@
     padding: 0.3rem;
 }
 
+td.tb-digit  {
+    padding-top: 0.5rem;
+}
+
 .tb-subtitle {
     padding-top:19px;
     border: 1px solid transparent;
