--- a/plays/templates/plays/plays.html
+++ b/plays/templates/plays/plays.html
@@ -52,11 +52,30 @@ tr:hover {
     display: inline-block;
     text-align: center;
 }
+
+@media all and (max-width: 768px) {
+    .trend-item  {
+        margin-right:1px;
+        min-width: 12px;
+        //font-size: .rem;
+        padding: .1rem!important;
+       
+    }
+}
+
 .table-position {
     margin-right:4px;
     min-width: 20px;
     display: inline-block;
 }
+
+@media all and (max-width: 768px) {
+    .table-position {
+        margin-right:1px;
+        min-width: 12px;       
+    }
+}
+
 
 .plays-table {
     border: 1px;
