--- a/profiles/templates/profiles/cards/coach/card_latest_games.html
+++ b/profiles/templates/profiles/cards/coach/card_latest_games.html
@@ -1,13 +1,12 @@
 {% load i18n %}
 {% load playmaker %}
 
->>>> {{ last_games }} <<<<
 <div class="card last-game-card">
     <div class="card-body">
         <h2 class="card-title">{% trans "Ostatnie mecze"%}</h2>
         <div class="card-text text-center">
             {% if last_games %}
-                {% include 'profiles/tables/_game_table.html' with short=True games=last_games user=show_user %}
+                {% include 'profiles/tables/_game_table.html' with short=True games=last_games user=show_user coach=True %}
             {% else %}
                 <span class="heading text-muted"> 
                   {% trans 'Brak danych dla obecnego sezonu' %}  
