--- a/plays/templates/plays/filters/season.html
+++ b/plays/templates/plays/filters/season.html
@@ -1,12 +1,6 @@
 {% load playmaker %}
-<select id="search-season" name="season" 
-    class="selectpicker" 
-    data-width="{{ size }}"  
-    title="sezon"
-    noneSelectedText="Wyszukaj rozgrywki"
->
-
-<option {{% if current_season == '2021/2022' %} selected {% endif %}>2021/2022</option>
-<option {{% if current_season == '2020/2021' %} selected {% endif %}>2020/2021</option>
-
+<select id="searchseason" name="season" class="side-filter selectpicker searchseason" data-width="{{ size }}" title="sezon" noneSelectedText="Wyszukaj rozgrywki">
+<option {% if current_season == '2021/2022' %} selected {% endif %}>2021/2022</option>
+<option {% if current_season == '2020/2021' %} selected {% endif %}>2020/2021</option>
+<option {% if current_season == '2019/2020' %} selected {% endif %}>2019/2020</option>
 </select>
