--- a/plays/templates/plays/partials/sidemenu_burger.html
+++ b/plays/templates/plays/partials/sidemenu_burger.html
@@ -2,14 +2,14 @@
 <style>
 .sidenav {
   height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
+  width: 0;
   position: fixed; /* Stay in place */
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
   background-color: #2b2b2b;
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
+
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
 
@@ -32,9 +32,8 @@
 .sidenav .closebtn {
   position: relative;
   top: 0;
-
   font-size: 26px;
-  margin-left: 160px;
+  margin-left: 240px;
 }
 
 
@@ -50,46 +49,47 @@
 }
 </style>
 
-<div id="mySidenav" class="sidenav"><br><Br>
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="icofont-close-circled main-color"></i></a>
-    <form>
-           {% include 'plays/filters/season.html' %}
-    </form>
-
-    <select id="leagues-search" class="selectpicker" data-live-search="true" >
-      {% for league in leagues %}
-          {% if league|has_season_data:current_season %}
-              <option data-tokens="{{league.name}} {{league.zpn}}"  value="{% url 'plays:summary' slug=league.slug  %}">{{ league.name }}</option>
-          {% endif %}
-      {% endfor %}
-  </select>
-  {% for league in leagues_data %}
-      {% if league.is_parent %}
-          {{ league.name }}
-          {% for child in league.league_set.all %}
-              {% if child|has_season_data:current_season %}
-                  <a href="{% url 'plays:summary' slug=child.slug  %}">{{ child.name }}</a>{{ child.serach_index }}
-              {% endif %}
-          {% endfor %}
-      {% else %}
-              {% if league|has_season_data:current_season %}
-                <a href="{% url 'plays:summary' slug=league.slug  %}">{{ league.name }}</a> {{ league.serach_index }}
-              {% endif %}
-      {% endif %}
-  {% endfor %}
+<div id="mySidenav" class="sidenav d-flex flex-column"><br><Br>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="icofont-close-circled main-color"></i></a>
+    <span>
+    {% for league in leagues %}
+                {% if league|has_season_data:current_season %}
+                    <div class="plays-link"><a href="{% url 'plays:summary' slug=league.slug  %}?season={{ current_season }}"><i class="icofont-arrow-right"></i>{{ league.name }}</a></div>
+                {% endif %}
+            {% endfor %}
+            
+            <div id="accordion1">
+                {% for league_grouped in league_groups %}
+                    <div class="" id="heading{{league_grouped.id}}" style="cursor: pointer;">
+                        <span style="color: #fff;" class="" data-toggle="collapse" data-target="#collapse{{league_grouped.id}}" aria-expanded="true" aria-controls="collapse{{league_grouped.id}}">
+                            <i class="icofont-arrow-down"></i>{{ league_grouped.name }}
+                        </span>
+                    </div>
+                    <div id="collapse{{league_grouped.id}}" class="collapse" aria-labelledby="heading{{league_grouped.id}}" data-parent="#accordion1">
+                        {% for child in league_grouped.league_set.all %}
+                            {% if child|has_season_data:current_season %}
+                                <div class="plays-sub-link"><a href="{% url 'plays:summary' slug=child.slug  %}?season={{ current_season }}">{{ child.name }}</a></div>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                {% endfor %}
+            </div>
+    </span>
 </div>
 
 <div>
-
 <!-- Use any element to open the sidenav -->
-<button class="btn btn-pm" onclick="openNav()">open</button>
+<button class="btn btn-pm" onclick="openNav()"><i class="icofont-arrow-left"></i>rozgrywki</button>
+
+{% include 'plays/filters/season.html' %}
+{% include 'plays/filters/leagues.html' %}
 
 
 </div>
   
 <script>
 function openNav() {
-  document.getElementById("mySidenav").style.width = "250px";
+  document.getElementById("mySidenav").style.width = "280px";
 }
 
 function closeNav() {
