--- a/plays/templates/plays/plays.html
+++ b/plays/templates/plays/plays.html
@@ -6,6 +6,21 @@
     {{ block.super }}
     <link href="{% static 'assets/css/profiles.css' %}" rel="stylesheet">
     <style>
+.pys-tbl {
+    table-layout: fixed;
+    width: 850px;
+}
+.pys-tbl-pm {
+    border:1px;
+}
+
+@media all and (max-width: 768px) {
+    .pys-tbl  {
+        table-layout: auto;  
+    }
+}
+
+
 .table td, .table th {
     padding: 0.3rem;
 }
@@ -95,6 +110,46 @@ border-top: 0px solid #dee2e6;
 
     line-height: .9;
 }
+.plays-link {
+    //font-size:.8rem;
+    color: #fff;
+}
+.plays-link a {
+    color: #fff;
+}
+.plays-sub-link {
+    //font-size:.8rem;
+    margin-left:15px;
+}
+.side-filter { 
+    width:200px!important;
+    padding-bottom:5px;
+}
+
+@media all and (max-width: 768px) {
+    .side-filter   {
+        width:130px!important;
+        padding-bottom:0px;
+        padding-left:4px;
+       
+    }
+}
+span.text {
+    font-size:.8rem;
+}
+.form-control {
+    font-size:.8rem;
+}
+.no-results{    font-size:.8rem;}
+.filter-option-inner-inner{
+    line-height: 1rem!important;
+    font-size:.8rem;
+}
+#leagues-side-bar {
+    background-color:#2b2b2b;
+    padding: 1px 1px;
+}
+
     </style>
 {% endblock extra_css%}
 
@@ -106,43 +161,38 @@ border-top: 0px solid #dee2e6;
 
 {% block content %}
 
-
 <div class="row">
+  <div class="col-12 d-md-none">
+    {% include "plays/partials/sidemenu_burger.html" with leagues_data=leagues %}
+  </div>
 
-<div class="col-12 d-md-none">
-    {% include "plays/partials/sidemenu_burger.html" with leagues_data=leagues2 %}
-</div>
-
-<section id="leagues-side-bar" class="col-2 d-none d-md-flex" style="background-color:#2b2b2b;" >
-  <div class="container" data-aos="fade-up">
-    <form>
+  <section id="leagues-side-bar" class="col-2 d-none d-md-flex">
+    <div class="container" data-aos="fade-up">
         {% include 'plays/filters/season.html' %}
-    </form>
-    <select id="leagues-search" class="selectpicker" data-live-search="true" >
+        {% include 'plays/filters/leagues.html' %}
         {% for league in leagues %}
             {% if league|has_season_data:current_season %}
-                <option data-tokens="{{league.name}} {{league.zpn}}"  value="{% url 'plays:summary' slug=league.slug  %}">{{ league.name }}</option>
+                <div class="plays-link"><a href="{% url 'plays:summary' slug=league.slug  %}?season={{ current_season }}"><i class="icofont-arrow-right"></i>{{ league.name }}</a></div>
             {% endif %}
         {% endfor %}
-    </select>
-
-        {% for league in leagues %}
-            {% if league.is_parent %}
-                {{ league.name }}
-                {% for child in league.league_set.all %}
-                    {% if child|has_season_data:current_season %}
-                        <div><a href="{% url 'plays:summary' slug=child.slug  %}">{{ child.name }}</a>{{ child.serach_index }}</div><br>
-                    {% endif %}
-                {% endfor %}
-            {% else %}
-                    {% if league|has_season_data:current_season %}
-                    <div><a href="{% url 'plays:summary' slug=league.slug  %}">{{ league.name }}</a> {{ league.serach_index }}</div><br>
-                    {% endif %}
-            {% endif %}
-        {% endfor %}
-
-</div>
-</section>
+        <div id="accordion">
+            {% for league_grouped in league_groups %}
+                <div class="" id="heading{{league_grouped.id}}" style="cursor: pointer;">
+                    <span style="color: #fff;" class="" data-toggle="collapse" data-target="#collapse{{league_grouped.id}}" aria-expanded="true" aria-controls="collapse{{league_grouped.id}}">
+                        <i class="icofont-arrow-down"></i>{{ league_grouped.name }}
+                    </span>
+                </div>
+                <div id="collapse{{league_grouped.id}}" class="collapse" aria-labelledby="heading{{league_grouped.id}}" data-parent="#accordion">
+                    {% for child in league_grouped.league_set.all %}
+                        {% if child|has_season_data:current_season %}
+                            <div class="plays-sub-link"><a href="{% url 'plays:summary' slug=child.slug  %}?season={{ current_season }}">{{ child.name }}</a></div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+    </section>
 
 <section id="plays" class="plays col-md-10" style="padding:0px 0px;">
 {% include 'plays/header_black.html' %}
@@ -192,18 +242,32 @@ border-top: 0px solid #dee2e6;
 
 {% block extra_js %}
 {{ block.super }}
-<script src="{% static 'assets/js/filters.js' %}"></script>
 {% include "plays/modals/modal_show_game.html" %}
 <script>
-    $('#leagues-search').on('changed.bs.select', function (e, clickedIndex, isSelected, previousValue) {
-        window.location.href = this.value;
+    $('.searchleagues').on('changed.bs.select', function (e, clickedIndex, isSelected, previousValue) {
+        if(typeof this.value !== "undefined"){
+            window.location.href = this.value;
+            console.log('yeess2');
+        };
     });
 
-    $('#search-season').on('changed.bs.select', function (e, clickedIndex, isSelected, previousValue) {
-        var search_params = new URLSearchParams(window.location.search);
-        search_params.set('season', this.value);
-        window.location.search = search_params.toString();
+    $("select").on("changed.bs.select", 
+        function(e, clickedIndex, newValue, oldValue) {
+        console.log(this.value, clickedIndex, newValue, oldValue)
     });
+//$(document).ready(function() {
+    $(".searchseason").on('changed.bs.select', function (e, clickedIndex, isSelected, previousValue) {
+
+        if(typeof this.value !== "undefined"){
+            var search_params = new URLSearchParams(window.location.search);
+            search_params.set('season', this.value);
+            // console.log('yeess', this.value, search_params.toString());
+            window.location.search = search_params.toString();
+        }
+       
+        
+    });
+//});
 
 $('#showGameModal').on('show.bs.modal', function (event) {
     var data = $(event.relatedTarget).data('game-json');
