--- a/plays/templates/plays/filters/leagues.html
+++ b/plays/templates/plays/filters/leagues.html
@@ -1,6 +1,6 @@
  <select id="searchleagues" class="side-filter selectpicker side-filter searchleagues" data-live-search="true">
-            <option data-tokens="" value="" >wybierz</option>
-            {% for history_league in history_leagues %}
-                <option data-tokens="{{history_league.league.name}} {{history_league.league.zpn}}" value="{% url 'plays:summary' slug=history_league.league.slug  %}?season={{ current_season }}">{{ history_league.league.name }} </option>
-            {% endfor %}
-        </select>
+    <option data-tokens="" value="" >wybierz</option>
+    {% for history_league in history_leagues %}
+        <option {% if league.name == history_league.league.name %} selected {% endif %} data-tokens="{{ history_league.league.name }} {{history_league.league.zpn}}" value="{% url 'plays:summary' slug=history_league.league.slug  %}?season={{ current_season }}">{{ history_league.league.name }} </option>
+    {% endfor %}
+</select>
