--- a/backend/templates/partials/_menuitems.html
+++ b/backend/templates/partials/_menuitems.html
@@ -12,10 +12,10 @@
         <a class="dropdown-item" href="{% url 'soccerbase:teams' %}">{% trans 'Klubów' %}</a>
     </div>
 </li>
-<li class="nav-item"><a class="nav-link" href="{% url 'marketplace:announcements'%}">{% trans 'Testy piłkarskie' %}</a></li>
+<li class="nav-item"><a class="nav-link" href="{% url 'marketplace:announcements'%}">{% trans 'Ogłoszenia' %}</a></li>
 <li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}">{% trans 'Produkty PlayMaker' %}</a></li>
 {% comment %} <li><a href="/products/">Produkty</a></li> {% endcomment %}
-<li class="nav-item"><a class="nav-link" href="/transfer/">{% trans 'Transfer' %}</a></li>
+<li class="nav-item"><a class="nav-link" href="/transfer/">{% trans 'Transfer' %}<  /a></li>
 <li class="nav-item"><a class="nav-link" href="/scouting/">{% trans 'Skauting' %}</a></li>
 {% comment %} <li><a href="/blog">Blog</a></li> {% endcomment %}
 {% comment %} <li><a href="#contact">Kontakt</a></li> {% endcomment %}
